fix: remove the overflow:hidden from body to dispaly all the content

--- a/src/components/ShootingStars/ShootingStars.css
+++ b/src/components/ShootingStars/ShootingStars.css
@@ -1,6 +1,5 @@
 body {
-  height: 100vh;
-  overflow: hidden;
+  height: fit-content;
   display: -webkit-box;
   display: flex;
 }
